--- a/model/classification/patch_size_test.ipynb
+++ b/model/classification/patch_size_test.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# patch_size를 1,3,5,7,9,11로 바꾸어 가면서 테스트 해 보자"
+    "# patch_size를 1, 3, 5, 7, 9, 11로 바꾸어 가면서 테스트 해 보자"
    ]
   },
   {
