--- a/model/classification/video_classification.ipynb
+++ b/model/classification/video_classification.ipynb
@@ -104,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "large_tif_dir = '/home/elicer/forest_carbon_ai/data/source_data/naive' #원천데이터 주소\n",
+    "large_tif_dir = '../../data/source_data/naive' #원천데이터 주소\n",
     "bands = 4 #밴드 수\n",
     "\n",
     "transform = get_transform(bands, scale_channels)\n",
@@ -112,7 +112,7 @@
     "train_dataset = TiffDataset(\n",
     "    large_tif_dir = large_tif_dir,\n",
     "    file_list = [\"jiri_1.tif\", \"jiri_2.tif\", \"sobaek.tif\"], #전체 지역을 모두 사용한다.\n",
-    "    label_file = '/home/elicer/forest_carbon_ai/data/label_data/label_mapping_sampled.csv',\n",
+    "    label_file = \"../../data/label_data/species/label_mapping_sampled.csv\",\n",
     "    box_filter_fn = lambda box_number: not test_filter(box_number),\n",
     "    transform=transform\n",
     ")\n",
@@ -120,7 +120,7 @@
     "val_dataset = TiffDataset(\n",
     "    large_tif_dir = large_tif_dir,\n",
     "    file_list = [\"jiri_1.tif\", \"jiri_2.tif\", \"sobaek.tif\"], #전체 지역을 모두 사용한다.\n",
-    "    label_file ='/home/elicer/forest_carbon_ai/data/label_data/label_mapping_sampled.csv',\n",
+    "    label_file =\"../../data/label_data/species/label_mapping_sampled.csv\",\n",
     "    box_filter_fn = test_filter,\n",
     "    transform=transform\n",
     ")\n",
@@ -2268,7 +2268,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "large_tif_dir = '/home/elicer/forest_carbon_ai/data/source_data/with_ndvi' #원천데이터 주소\n",
+    "large_tif_dir = '../../data/source_data/with_ndvi' #원천데이터 주소\n",
     "bands = 5 #밴드 수\n",
     "\n",
     "transform = get_transform(bands, scale_channels)\n",
@@ -2276,7 +2276,7 @@
     "train_dataset = TiffDataset(\n",
     "    large_tif_dir = large_tif_dir,\n",
     "    file_list = [\"jiri_1.tif\", \"jiri_2.tif\", \"sobaek.tif\"], #전체 지역을 모두 사용한다.\n",
-    "    label_file = '/home/elicer/forest_carbon_ai/data/label_data/label_mapping_sampled.csv',\n",
+    "    label_file = \"../../data/label_data/species/label_mapping_sampled.csv\",\n",
     "    box_filter_fn = lambda box_number: not test_filter(box_number),\n",
     "    transform=transform\n",
     ")\n",
@@ -2284,7 +2284,7 @@
     "val_dataset = TiffDataset(\n",
     "    large_tif_dir = large_tif_dir,\n",
     "    file_list = [\"jiri_1.tif\", \"jiri_2.tif\", \"sobaek.tif\"], #전체 지역을 모두 사용한다.\n",
-    "    label_file = '/home/elicer/forest_carbon_ai/data/label_data/label_mapping_sampled.csv',\n",
+    "    label_file = \"../../data/label_data/species/label_mapping_sampled.csv\",\n",
     "    box_filter_fn = test_filter,\n",
     "    transform=transform\n",
     ")\n",
@@ -4431,7 +4431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "large_tif_dir = '/home/elicer/forest_carbon_ai/data/source_data/with_ndvi_s2' #원천데이터 주소\n",
+    "large_tif_dir = '../../data/source_data/with_ndvi_s2' #원천데이터 주소\n",
     "bands = 10 #밴드 수\n",
     "\n",
     "transform = get_transform(bands, scale_channels)\n",
@@ -4439,7 +4439,7 @@
     "train_dataset = TiffDataset(\n",
     "    large_tif_dir = large_tif_dir,\n",
     "    file_list = [\"jiri_1.tif\", \"jiri_2.tif\", \"sobaek.tif\"], #전체 지역을 모두 사용한다.\n",
-    "    label_file = '/home/elicer/forest_carbon_ai/data/label_data/label_mapping_sampled.csv',\n",
+    "    label_file = \"../../data/label_data/species/label_mapping_sampled.csv\",\n",
     "    box_filter_fn = lambda box_number: not test_filter(box_number),\n",
     "    transform=transform\n",
     ")\n",
@@ -4447,7 +4447,7 @@
     "val_dataset = TiffDataset(\n",
     "    large_tif_dir = large_tif_dir,\n",
     "    file_list = [\"jiri_1.tif\", \"jiri_2.tif\", \"sobaek.tif\"], #전체 지역을 모두 사용한다.\n",
-    "    label_file = '/home/elicer/forest_carbon_ai/data/label_data/label_mapping_sampled.csv',\n",
+    "    label_file = \"../../data/label_data/species/label_mapping_sampled.csv\",\n",
     "    box_filter_fn = test_filter,\n",
     "    transform=transform\n",
     ")\n",
@@ -6594,7 +6594,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "large_tif_dir = '/home/elicer/forest_carbon_ai/data/source_data/with_s2' #원천데이터 주소\n",
+    "large_tif_dir = '../../data/source_data/with_s2' #원천데이터 주소\n",
     "bands = 9 #밴드 수\n",
     "\n",
     "transform = get_transform(bands, scale_channels)\n",
@@ -6602,7 +6602,7 @@
     "train_dataset = TiffDataset(\n",
     "    large_tif_dir = large_tif_dir,\n",
     "    file_list = [\"jiri_1.tif\", \"jiri_2.tif\", \"sobaek.tif\"], #전체 지역을 모두 사용한다.\n",
-    "    label_file = '/home/elicer/forest_carbon_ai/data/label_data/label_mapping_sampled.csv',\n",
+    "    label_file = \"../../data/label_data/species/label_mapping_sampled.csv\",\n",
     "    box_filter_fn = lambda box_number: not test_filter(box_number),\n",
     "    transform=transform\n",
     ")\n",
@@ -6610,7 +6610,7 @@
     "val_dataset = TiffDataset(\n",
     "    large_tif_dir = large_tif_dir,\n",
     "    file_list = [\"jiri_1.tif\", \"jiri_2.tif\", \"sobaek.tif\"], #전체 지역을 모두 사용한다.\n",
-    "    label_file = '/home/elicer/forest_carbon_ai/data/label_data/label_mapping_sampled.csv',\n",
+    "    label_file = \"../../data/label_data/species/label_mapping_sampled.csv\",\n",
     "    box_filter_fn = test_filter,\n",
     "    transform=transform\n",
     ")\n",
