--- a/model/regression/u_net.ipynb
+++ b/model/regression/u_net.ipynb
@@ -3,6 +3,99 @@
     {
       "cell_type": "code",
       "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import torch\n",
+        "from torchvision import transforms\n",
+        "\n",
+        "class DualTransform:\n",
+        "    def __init__(self, source_transform, label_transform):\n",
+        "        self.source_transform = source_transform\n",
+        "        self.label_transform = label_transform\n",
+        "\n",
+        "    def __call__(self, patch, label_patch):\n",
+        "        patch = self.source_transform(patch)\n",
+        "        label_patch = self.label_transform(label_patch)  # 레이블도 동일하게 변환 적용\n",
+        "        return patch, label_patch\n",
+        "\n",
+        "base_transform = transforms.Compose([\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Lambda(lambda x: x.float()),  # uint16 → float 변환\n",
+        "])\n",
+        "\n",
+        "# DualTransform을 적용하여 입력과 레이블을 변환\n",
+        "dual_transform = DualTransform(base_transform, base_transform)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "torch.Size([16, 108, 3, 3])\n",
+            "torch.Size([16, 1, 3, 3])\n"
+          ]
+        }
+      ],
+      "source": [
+        "from utils.utils import TiffDataset\n",
+        "import torch\n",
+        "from torch.utils.data import DataLoader\n",
+        "\n",
+        "# 데이터 경로 설정\n",
+        "large_tif_dir = \"../../data/source_data/with_s2/\"  # 원천 데이터 TIFF 파일이 있는 폴더\n",
+        "label_dir = \"../../data/label_data/DBH\"  # 대응하는 레이블 TIFF 파일이 있는 폴더\n",
+        "file_list = [\"jiri_1.tif\", \"jiri_2.tif\", \"sobaek.tif\"]  # 사용할 TIFF 파일 리스트\n",
+        "\n",
+        "# 훈련 데이터와 검증 데이터를 나누는 box 필터 함수\n",
+        "def train_box_filter(box_number):\n",
+        "    return box_number <= 50  # 예: box_number가 50 미만인 것만 훈련 데이터로 사용\n",
+        "\n",
+        "def val_box_filter(box_number):\n",
+        "    return box_number > 50  # 예: box_number가 50 이상인 것만 검증 데이터로 사용\n",
+        "\n",
+        "# 데이터셋 생성\n",
+        "train_dataset = TiffDataset(large_tif_dir, label_dir, file_list, patch_size=3, stride=1, box_filter_fn=train_box_filter,transform=dual_transform)\n",
+        "val_dataset = TiffDataset(large_tif_dir, label_dir, file_list, patch_size=3, stride=1, box_filter_fn=val_box_filter, transform=dual_transform)\n",
+        "\n",
+        "# DataLoader 설정\n",
+        "train_loader = DataLoader(train_dataset, batch_size=16, shuffle=True, num_workers=0)\n",
+        "val_loader = DataLoader(val_dataset, batch_size=16, shuffle=False, num_workers=0)\n",
+        "\n",
+        "for patch, label in train_loader:\n",
+        "    print(patch.shape)\n",
+        "    print(label.shape)\n",
+        "    break\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "13482006"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "len(val_dataset)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "id": "w-XcTof2sO8w"
       },
@@ -23,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "id": "HEakqAFWsX8a"
       },
@@ -38,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {
         "id": "Vk8Oha5ysadd"
       },
@@ -81,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {
         "id": "CNAEdM6AAR0Z"
       },
@@ -148,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -167,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -176,7 +269,19 @@
         "id": "mZMDtwUNseTP",
         "outputId": "c3278016-49e0-4ed7-b350-44b5e6cfd5ee"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: 'C:\\\\Users\\\\taebin\\\\Desktop\\\\my_study\\\\capstone_design\\\\data\\\\jiri_toy_data_128\\\\원천 데이터\\\\concated'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[1;32m/home/elicer/forest_carbon_ai/model/regression/u_net.ipynb Cell 9\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell://jytdqzecfdkjdxkj.tunnel-pt.elice.io/home/elicer/forest_carbon_ai/model/regression/u_net.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Prepare data\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://jytdqzecfdkjdxkj.tunnel-pt.elice.io/home/elicer/forest_carbon_ai/model/regression/u_net.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m file_names \u001b[39m=\u001b[39m \u001b[39msorted\u001b[39m(os\u001b[39m.\u001b[39mlistdir(input_dir))  \u001b[39m# Assumes matching files exist in both directories\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://jytdqzecfdkjdxkj.tunnel-pt.elice.io/home/elicer/forest_carbon_ai/model/regression/u_net.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m train_files, val_files \u001b[39m=\u001b[39m train_test_split(file_names, test_size\u001b[39m=\u001b[39m\u001b[39m0.2\u001b[39m, random_state\u001b[39m=\u001b[39m\u001b[39m42\u001b[39m) \u001b[39m#20%는 validation 데이터로 사용한다.\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://jytdqzecfdkjdxkj.tunnel-pt.elice.io/home/elicer/forest_carbon_ai/model/regression/u_net.ipynb#W5sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m train_dataset \u001b[39m=\u001b[39m {}\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:\\\\Users\\\\taebin\\\\Desktop\\\\my_study\\\\capstone_design\\\\data\\\\jiri_toy_data_128\\\\원천 데이터\\\\concated'"
+          ]
+        }
+      ],
       "source": [
         "# Prepare data\n",
         "file_names = sorted(os.listdir(input_dir))  # Assumes matching files exist in both directories\n",
@@ -197,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -227,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "81_Iu64VCTEn"
       },
@@ -245,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "6thsXuiBCwD4"
       },
@@ -305,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -398,7 +503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "L5EvXFmFEwg5"
       },
@@ -444,7 +549,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -569,7 +674,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -578,7 +683,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -598,7 +703,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -633,7 +738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -642,7 +747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -669,7 +774,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -678,7 +783,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -713,7 +818,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -722,7 +827,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -762,7 +867,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.7"
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
