--- a/model/classification/DNN.ipynb
+++ b/model/classification/DNN.ipynb
@@ -114,7 +114,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3683,6 +3685,427 @@
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class LargeDNN(nn.Module):\n",
+    "    def __init__(self, input_dim=4*12*9*9, hidden_dim=256, output_dim=6, dropout_rate=0.3):\n",
+    "        super(LargeDNN, self).__init__()\n",
+    "\n",
+    "        self.fc1 = nn.Linear(input_dim, hidden_dim)\n",
+    "        self.norm1 = nn.LayerNorm(hidden_dim)\n",
+    "        self.dropout1 = nn.Dropout(dropout_rate)\n",
+    "\n",
+    "        self.fc2 = nn.Linear(hidden_dim, hidden_dim)\n",
+    "        self.norm2 = nn.LayerNorm(hidden_dim)\n",
+    "        self.dropout2 = nn.Dropout(dropout_rate)\n",
+    "\n",
+    "        self.fc3 = nn.Linear(hidden_dim, hidden_dim // 2)\n",
+    "        self.norm3 = nn.LayerNorm(hidden_dim // 2)\n",
+    "        self.dropout3 = nn.Dropout(dropout_rate)\n",
+    "\n",
+    "        self.fc4 = nn.Linear(hidden_dim // 2, hidden_dim // 2)\n",
+    "        self.norm4 = nn.LayerNorm(hidden_dim // 2)\n",
+    "        self.dropout4 = nn.Dropout(dropout_rate)\n",
+    "\n",
+    "        self.fc5 = nn.Linear(hidden_dim // 2, hidden_dim // 4)\n",
+    "        self.norm5 = nn.LayerNorm(hidden_dim // 4)\n",
+    "        self.dropout5 = nn.Dropout(dropout_rate)\n",
+    "\n",
+    "        self.fc6 = nn.Linear(hidden_dim // 4, hidden_dim // 4)\n",
+    "        self.norm6 = nn.LayerNorm(hidden_dim // 4)\n",
+    "        self.dropout6 = nn.Dropout(dropout_rate)\n",
+    "\n",
+    "        self.fc7 = nn.Linear(hidden_dim // 4, output_dim)\n",
+    "\n",
+    "        # Skip connection projections\n",
+    "        self.skip_proj = nn.Linear(input_dim, output_dim)  # Input → Output skip\n",
+    "        self.skip1 = nn.Linear(hidden_dim, hidden_dim)  # fc1 → fc2 skip\n",
+    "        self.skip2 = nn.Linear(hidden_dim // 2, hidden_dim // 2)  # fc3 → fc4 skip\n",
+    "        self.skip3 = nn.Linear(hidden_dim // 4, hidden_dim // 4)  # fc5 → fc6 skip\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = x.view(x.shape[0], -1)  # (batch_size, input_dim)\n",
+    "        skip = self.skip_proj(x)  # Skip connection for input to output\n",
+    "\n",
+    "        # Block 1\n",
+    "        x = self.fc1(x)\n",
+    "        x = self.norm1(x)\n",
+    "        x = torch.relu(x)\n",
+    "        x = self.dropout1(x)\n",
+    "        \n",
+    "        # Block 2 with skip connection\n",
+    "        residual = x  # Save input for skip\n",
+    "        x = self.fc2(x)\n",
+    "        x = self.norm2(x)\n",
+    "        x = torch.relu(x)\n",
+    "        x = self.dropout2(x)\n",
+    "        x = x + self.skip1(residual)  # Add skip connection\n",
+    "\n",
+    "        # Block 3\n",
+    "        x = self.fc3(x)\n",
+    "        x = self.norm3(x)\n",
+    "        x = torch.relu(x)\n",
+    "        x = self.dropout3(x)\n",
+    "\n",
+    "        # Block 4 with skip connection\n",
+    "        residual = x  # Save input for skip\n",
+    "        x = self.fc4(x)\n",
+    "        x = self.norm4(x)\n",
+    "        x = torch.relu(x)\n",
+    "        x = self.dropout4(x)\n",
+    "        x = x + self.skip2(residual)  # Add skip connection\n",
+    "\n",
+    "        # Block 5\n",
+    "        x = self.fc5(x)\n",
+    "        x = self.norm5(x)\n",
+    "        x = torch.relu(x)\n",
+    "        x = self.dropout5(x)\n",
+    "\n",
+    "        # Block 6 with skip connection\n",
+    "        residual = x  # Save input for skip\n",
+    "        x = self.fc6(x)\n",
+    "        x = self.norm6(x)\n",
+    "        x = torch.relu(x)\n",
+    "        x = self.dropout6(x)\n",
+    "        x = x + self.skip3(residual)  # Add skip connection\n",
+    "\n",
+    "        # Final output layer\n",
+    "        x = self.fc7(x)\n",
+    "\n",
+    "        return x + skip  # Final skip connection from input\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_epochs = 100\n",
+    "bands = 4 #밴드 수\n",
+    "patch_size = 9\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "os.makedirs(\"./checkpoints/dnn\", exist_ok=True)\n",
+    "\n",
+    "class ReshapeTransform:\n",
+    "    \"\"\"(12*bands, 3, 3) → (12, bands, 3, 3) 변환\"\"\"\n",
+    "    def __init__(self, bands):\n",
+    "        self.bands = bands\n",
+    "\n",
+    "    def __call__(self, x):\n",
+    "        return x.view(12, self.bands, 9, 9).permute(1, 0, 2, 3)\n",
+    "\n",
+    "def get_transform(bands, scale_channels_func=None):\n",
+    "    transform_list = [\n",
+    "        transforms.ToTensor(),  # (H, W, C) → (C, H, W)\n",
+    "        transforms.Lambda(lambda x: x.float()),  # uint16 → float 변환\n",
+    "        ReshapeTransform(bands)  # (12*bands, 3, 3) → (bands, 12, 3, 3)\n",
+    "    ]\n",
+    "\n",
+    "    if scale_channels_func:\n",
+    "        transform_list.append(transforms.Lambda(scale_channels_func))  # 채널별 값 조정 추가\n",
+    "\n",
+    "    return transforms.Compose(transform_list)\n",
+    "\n",
+    "#scaling 함수 - 채널별로 범위의 차이가 크기때문에 어느정도 맞추어주기 위해서 수행\n",
+    "def scale_channels(x):\n",
+    "    \"\"\"특정 채널값 조정\"\"\"\n",
+    "    x[0:3] *= 5  # B,G,R 채널 * 5\n",
+    "    if 4 < x.shape[0]:\n",
+    "        x[4] *= 0.5  # NDVI 채널 * 0.5\n",
+    "    return x\n",
+    "\n",
+    "large_tif_dir = '../../data/source_data/naive' #원천데이터 주소\n",
+    "\n",
+    "transform = get_transform(bands, scale_channels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100 - Training: 100%|███████████████████████████████████████████████| 3773/3773 [00:39<00:00, 95.32it/s]\n",
+      "Epoch 1/100 - Validation: 100%|██████████████████████████████████████████████| 936/936 [00:06<00:00, 145.17it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch [1/100], Train Loss: 72.6155, Train Accuracy: 68.68%, Val Loss: 105.0687, Val Accuracy: 66.93%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/100 - Training: 100%|███████████████████████████████████████████████| 3773/3773 [00:39<00:00, 95.92it/s]\n",
+      "Epoch 2/100 - Validation: 100%|██████████████████████████████████████████████| 936/936 [00:06<00:00, 140.96it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch [2/100], Train Loss: 70.7472, Train Accuracy: 73.18%, Val Loss: 76.1045, Val Accuracy: 66.56%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/100 - Training: 100%|███████████████████████████████████████████████| 3773/3773 [00:39<00:00, 96.03it/s]\n",
+      "Epoch 3/100 - Validation: 100%|██████████████████████████████████████████████| 936/936 [00:06<00:00, 140.36it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch [3/100], Train Loss: 67.8486, Train Accuracy: 74.55%, Val Loss: 44.6481, Val Accuracy: 73.72%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/100 - Training: 100%|███████████████████████████████████████████████| 3773/3773 [00:39<00:00, 96.69it/s]\n",
+      "Epoch 4/100 - Validation: 100%|██████████████████████████████████████████████| 936/936 [00:06<00:00, 142.63it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch [4/100], Train Loss: 66.7008, Train Accuracy: 74.93%, Val Loss: 46.4991, Val Accuracy: 75.23%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/100 - Training: 100%|███████████████████████████████████████████████| 3773/3773 [00:38<00:00, 97.34it/s]\n",
+      "Epoch 5/100 - Validation: 100%|██████████████████████████████████████████████| 936/936 [00:06<00:00, 141.59it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch [5/100], Train Loss: 70.7093, Train Accuracy: 75.24%, Val Loss: 91.4455, Val Accuracy: 64.10%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6/100 - Training: 100%|███████████████████████████████████████████████| 3773/3773 [00:39<00:00, 95.80it/s]\n",
+      "Epoch 6/100 - Validation: 100%|██████████████████████████████████████████████| 936/936 [00:06<00:00, 139.34it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch [6/100], Train Loss: 67.0757, Train Accuracy: 75.81%, Val Loss: 49.1778, Val Accuracy: 75.41%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7/100 - Training: 100%|███████████████████████████████████████████████| 3773/3773 [00:39<00:00, 96.05it/s]\n",
+      "Epoch 7/100 - Validation: 100%|██████████████████████████████████████████████| 936/936 [00:06<00:00, 137.87it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch [7/100], Train Loss: 68.6346, Train Accuracy: 75.76%, Val Loss: 49.3523, Val Accuracy: 77.30%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8/100 - Training: 100%|███████████████████████████████████████████████| 3773/3773 [00:40<00:00, 93.82it/s]\n",
+      "Epoch 8/100 - Validation: 100%|██████████████████████████████████████████████| 936/936 [00:06<00:00, 144.24it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch [8/100], Train Loss: 69.3568, Train Accuracy: 76.11%, Val Loss: 94.9805, Val Accuracy: 68.28%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9/100 - Training: 100%|███████████████████████████████████████████████| 3773/3773 [00:38<00:00, 97.72it/s]\n",
+      "Epoch 9/100 - Validation: 100%|██████████████████████████████████████████████| 936/936 [00:06<00:00, 143.54it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch [9/100], Train Loss: 68.4926, Train Accuracy: 76.16%, Val Loss: 103.7516, Val Accuracy: 62.27%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10/100 - Training: 100%|██████████████████████████████████████████████| 3773/3773 [00:38<00:00, 98.35it/s]\n",
+      "Epoch 10/100 - Validation: 100%|█████████████████████████████████████████████| 936/936 [00:07<00:00, 129.80it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch [10/100], Train Loss: 69.2535, Train Accuracy: 76.25%, Val Loss: 88.6091, Val Accuracy: 68.33%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 11/100 - Training: 100%|██████████████████████████████████████████████| 3773/3773 [00:39<00:00, 94.45it/s]\n",
+      "Epoch 11/100 - Validation: 100%|█████████████████████████████████████████████| 936/936 [00:06<00:00, 141.55it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch [11/100], Train Loss: 67.6740, Train Accuracy: 76.79%, Val Loss: 61.8133, Val Accuracy: 74.40%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 12/100 - Training: 100%|██████████████████████████████████████████████| 3773/3773 [00:38<00:00, 98.32it/s]\n",
+      "Epoch 12/100 - Validation: 100%|█████████████████████████████████████████████| 936/936 [00:06<00:00, 145.24it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch [12/100], Train Loss: 66.9927, Train Accuracy: 76.63%, Val Loss: 50.6656, Val Accuracy: 76.70%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 13/100 - Training: 100%|██████████████████████████████████████████████| 3773/3773 [00:38<00:00, 97.49it/s]\n",
+      "Epoch 13/100 - Validation: 100%|█████████████████████████████████████████████| 936/936 [00:06<00:00, 144.52it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Epoch [13/100], Train Loss: 68.7518, Train Accuracy: 76.59%, Val Loss: 47.9875, Val Accuracy: 76.18%\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 14/100 - Training:   9%|████▎                                          | 351/3773 [00:03<00:35, 97.42it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "val_filters = [\n",
+    "        lambda x: x >= 1 and (x % 50) in {1, 6, 13, 18, 25, 30, 32, 37, 44, 49} ,\n",
+    "        lambda x: x >= 2 and (x % 50) in {2, 7, 14, 19, 21, 26, 33, 38, 45, 0}  ,\n",
+    "        lambda x: x >= 3 and (x % 50) in {3, 8, 15, 20, 22, 27, 34, 39, 41, 46},\n",
+    "        lambda x: x >= 4 and (x % 50) in {4, 9, 11, 16, 23, 28, 35, 40, 42, 47 }  ,\n",
+    "        lambda x: x >= 5 and (x % 50) in {5, 10, 12, 17, 24, 29, 31, 36, 43, 48},\n",
+    "    ]\n",
+    "    \n",
+    "#     os.makedirs(\"./checkpoints/hybrid\", exist_ok=True)\n",
+    "    \n",
+    "#     result_df = {} #반환하는 데이터 프레임을 딕셔너리로 만들기\n",
+    "\n",
+    "idx = 0\n",
+    "\n",
+    "train_dataset = TiffDataset(\n",
+    "    large_tif_dir = large_tif_dir,\n",
+    "    file_list = [\"jiri_1.tif\", \"jiri_2.tif\", \"sobaek.tif\"], #전체 지역을 모두 사용한다.\n",
+    "    label_file = \"../../data/label_data/species/label_mapping_sampled.csv\",\n",
+    "    box_filter_fn = lambda box_number: not val_filters[idx](box_number),\n",
+    "    patch_size = patch_size,\n",
+    "    transform=transform\n",
+    ")\n",
+    "\n",
+    "val_dataset = TiffDataset(\n",
+    "    large_tif_dir = large_tif_dir,\n",
+    "    file_list = [\"jiri_1.tif\", \"jiri_2.tif\", \"sobaek.tif\"], #전체 지역을 모두 사용한다.\n",
+    "    label_file =\"../../data/label_data/species/label_mapping_sampled.csv\",\n",
+    "    box_filter_fn = val_filters[idx],\n",
+    "    patch_size = patch_size,\n",
+    "    transform=transform\n",
+    ")\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=32, shuffle=False)\n",
+    "\n",
+    "model = LargeDNN().to(device)\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.AdamW(model.parameters(), lr=1e-4, weight_decay=1e-4)\n",
+    "\n",
+    "best_model_state, train_losses, val_losses = train_model(model, train_loader, val_loader, criterion, optimizer, num_epochs=num_epochs, patience=30)\n",
+    "model.load_state_dict(best_model_state)\n",
+    "#         torch.save(best_model_state, f\"./checkpoints/dnn/dnn_{bands}_{patch_size}_{num_epochs}_{idx}.pth\")"
    ]
   }
  ],
