--- a/model/classification/video_classification.ipynb
+++ b/model/classification/video_classification.ipynb
@@ -8747,9 +8747,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "A",
    "language": "python",
-   "name": "python3"
+   "name": "a"
   },
   "language_info": {
    "codemirror_mode": {
@@ -8761,7 +8761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
